// Copyright 2025 Shota FUJI
//
// This source code is licensed under Zero-Clause BSD License.
// You can find a copy of the Zero-Clause BSD License at LICENSES/0BSD.txt
// You may also obtain a copy of the Zero-Clause BSD License at
// <https://opensource.org/license/0bsd>
//
// SPDX-License-Identifier: 0BSD

edition = "2023";

package event;

option go_package = "pocka.jp/x/event_sourcing_user_management_poc/gen/event";

message InitialAdminCreationPasswordCreated {
  bytes password_hash = 1;
  bytes salt = 2;
}
